--- a/src/MannsBlog/Views/Root/About.cshtml
+++ b/src/MannsBlog/Views/Root/About.cshtml
@@ -41,6 +41,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <p>@_localizer["bio3"]</p>
         <h4>@_localizer["connect"]</h4>
         <ul class="list-unstyled">
+            <li><a href="mailto:Sascha.Manns@@outlook.de"><i class="fas fa-envelope"></i> Sascha.Manns@outlook.de</a></li>
+            <li><a href="https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x496ed69e19f956dc7784d79cffa8021619dd0900" target="_blank"><i class="fas fa-lock"></i> 0x496ed69e19f956dc7784d79cffa8021619dd0900</a></li>
+            <li><a href="https://mastodon.social/@@saigkill" target="_blank"><i class="fab fa-mastodon"></i> Mastodon</a></li>
             <li><a href="https://twitter.com/saigkill" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a></li>
             <li><a href="https://www.facebook.com/sascha.manns" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a></li>
             <li><a href="https://instagram.com/sascha.manns" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
@@ -50,6 +53,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <li><a href="https://www.xing.com/profile/SaschaZyroslawKyrill_Manns/cv" target="_blank"><i class="fab fa-xing-square"></i> XING</a></li>
             <li><a href="https://www.last.fm/user/illuminatus1979" target="_blank"><i class="fab fa-lastfm-square"></i> Last.fm</a></li>
             <li><a href="https://dev.to/saigkill" title="Dev.to Community"><i class="fab fa-dev"></i> Dev.to</a></li>
+            <li><a href="https://discord.com/channels/@@saigkill0#6514" target="_blank"><i class="fab fa-discord"></i> Discord</a></li>
+            <li><img src="~/img/social/element-matrix.png" alt="" class="alignnone size-medium wp-image-86" width="20" height="20"> Matrix: @@saigkill0:matrix.org</li>
+            <li><a href="https://steamcommunity.com/id/saigkill/"><i class="fab fa-steam-square"></i> Steam</a></li>
         </ul>
         <h4>@_localizer["coding-activity"]</h4>
         <ul class="list-unstyled">
@@ -67,6 +73,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <li><a href="https://www.amazon.de/registry/wishlist/D75HOEQ00BDD"><img src="~/img/misc/amazon.svg" width="12%" style="margin-top: 10px" /></a></li>
                 <li><a href="https://paypal.me/SaschaManns" target="_blank"><img src="~/img/misc/paypal_donate.svg" width="12%" style="margin-right: 5px; margin-top: 10px" /></a></li>
                 <li><a href="https://www.patreon.com/saigkill"><img src="~/img/misc/patreon.svg" width="12%" style="margin-top: 10px" /></a></li>
+                <li><a href="https://liberapay.com/saigkill/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg" style="margin-top: 10px"></a></li>
+                <li><a href=""></a></li>
             </ul>
         </div>
     </div>
