--- a/src/MannsBlog/wwwroot/css/site.css
+++ b/src/MannsBlog/wwwroot/css/site.css
@@ -301,7 +301,7 @@ h4,
 h5,
 h6 {
     font-weight: 400;
-    font-family: 'Segoe UI Light', 'Isonorm Pro';
+    font-family: 'Isonorm Pro';
 }
 hr.tiny-hr {
   padding: 0;
