--- a/src/MannsBlog/Views/Shared/_Layout.cshtml
+++ b/src/MannsBlog/Views/Shared/_Layout.cshtml
@@ -146,9 +146,9 @@
         <link href="~/css/clean-blog.css" rel="stylesheet" />
         <link href="~/lib/cookieconsent/build/cookieconsent.min.css" rel="stylesheet" />
         <link href="~/lib/highlight.js/styles/default.css" rel="stylesheet" />
-        @RenderSection("Styles", required: false)
         <link href="~/css/fonts.css" rel="stylesheet" />
         <link href="~/css/site.css" rel="stylesheet" />
+        @RenderSection("Styles", required: false)
     </environment>
     <environment exclude="Development">
         <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -160,9 +160,9 @@
         <link href="~/css/clean-blog.min.css" rel="stylesheet" />
         <link href="~/lib/cookieconsent/build/cookieconsent.min.css" rel="stylesheet" />
         <link href="~/lib/highlight.js/styles/default.css" rel="stylesheet" />
-        @RenderSection("Styles", required: false)
         <link href="~/css/fonts.min.css" rel="stylesheet" />
         <link href="~/css/site.min.css" rel="stylesheet" />
+        @RenderSection("Styles", required: false)
     </environment>
 
 
@@ -177,7 +177,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-inverse" style="background-color: rgba(1,71,130,1)">
-        <a class="navbar-brand" asp-controller="Root" asp-action="Index">Sascha Manns's Twilight Zone</a>
+        <a class="navbar-brand" asp-controller="Root" asp-action="Index">Sascha Manns Twilight Zone</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#theMenu">
             &#9776;
         </button>
