--- a/src/MannsBlog/Views/Shared/_LayoutCV.cshtml
+++ b/src/MannsBlog/Views/Shared/_LayoutCV.cshtml
@@ -162,7 +162,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <div class="d-flex position-relative w-100">
             
             <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-inverse" style="background-color: #23a592">
-                <a class="navbar-brand" asp-controller="Root" asp-action="Index">Sascha Manns's Twilight Zone</a>
+                <a class="navbar-brand" asp-controller="Root" asp-action="Index">Sascha Manns Twilight Zone</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#theMenu">
                     &#9776;
                 </button>
